commit generated docs

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
 .DS_Store
 .idea
-.build
 .venv
 __pycache__
 *.pyc
 *.pyo
+
+# Ignore everything inside .build/
+.build/
+
+# Allow .build/latest/Terraform.docset/ and its contents
+!.build/latest/
+!.build/latest/Terraform.docset/
+!.build/latest/Terraform.docset/**
