disable auto scheduled build
Disabled scheduled for now as upstream fixed their builds and this is no longer needed

--- a/.github/workflows/tag-next-release.yml
+++ b/.github/workflows/tag-next-release.yml
@@ -1,7 +1,8 @@
 name: Tag Next Release
 on:
-  schedule:
-    - cron: "0 18 * * 0"  # every Sunday at 6pm UTC
+# Disabled scheduled for now as upstream fixed their builds and this is no longer needed
+#  schedule:
+#    - cron: "0 18 * * 0"  # every Sunday at 6pm UTC
   workflow_dispatch:
 
 jobs:
